# pyshare

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  format-lint.yml  type.yml
docs/: index.md
docs/guides/variables/: wave-1.md  wave-2.md  wave-3.md  wave-4.md  wave-5.md  wave-6.md  wave-7.md  wave-8.md  wave-9.md
docs/reference/: read.md
pyshare/: __init__.py  read.py
scripts/: generate_variable_dictionary.py
site/: index.html  objects.inv  search.json
site/markdown/: index.html
site/reference/read/: index.html
