[project]
name = "pyshare"
version = "0.0.1"
description = "Python interface to work with SHARE data (Survey of Health, Ageing and Retirement in Europe)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.40.1",
  "polars-readstat>=0.15.0",
]

[dependency-groups]
dev = [
  "mkdocstrings>=1.0.4",
  "mkdocstrings-python>=2.0.3",
  "prek>=0.3.10",
  "pytest>=9.0.3",
  "ruff>=0.15.11",
  "ty>=0.0.32",
  "zensical>=0.0.34",
]
